--- a/react/public/index.html
+++ b/react/public/index.html
@@ -26,6 +26,8 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div id="header"></div>
+    <div id="navigation"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
